Add content and image to the recipes

--- a/recipes/prawns-al-pil-pil.html
+++ b/recipes/prawns-al-pil-pil.html
@@ -8,5 +8,28 @@
 </head>
 <body>
     <h1>Delicious prawns al pil-pil that will surprise your family</h1>
+    <img src="../img/Prawns.jpg" alt="Tasty oven-baked ribs" width="600">  
+        <h2>Surprise your family with this easy but delicious ribs recipe</h2>
+            <p>After a Cooking Class with us there are two things very clear for everyone: the Mediterranean and Spanish cuisine cannot exist without good extra virgin olive oil, neither without garlic! And that for many foreigners in “exorbitant” quantities that challenge their knowledge, but to which one can get used to effortlessly.</p>
+            <p> A good example of this would be the delicious “pil-pil prawns”. This crustacean, the dish is primarily made out of, can be found along the Andalusian coast and is a popular ingredient in many traditional and modern recipes. In fact there is no tapas bar that appreciates itself that wouldn’t offer it in this version. It’s a classic, fast, simple, tasty and healthy- you cannot ask for more.            </p>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>Peeled prawns (20 approximately)</li>
+                <li>5 cloves of garlic
+                </li>
+                <li>Parsley</li>
+                <li>Pimentón de La Vera dulce (sweet paprika powder). If you can’t find it in your grocery store, this is a good one available on amazon You can buy the spicy one if you don’t have the cayenne pepper.</li>
+                <li>Chili (Dried cayenne pepper). Whole dried or ground cayenne.</li>  
+                <li>Extra Virgin Olive oil.</li>
+                <li>Salt</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Chop the garlic in slices, some chili (depending on your preferences) and parsley.</li>
+                <li>Add quite a lot of olive oil in an earthenware casserole until covering the entire bottom and heat it up.</li>
+                <li>When the oil is hot, add the garlic, chili and parsley.</li>
+                <li>Once all these ingredients are slightly fried, incorporate the peeled prawns (without head) and cook them in the pot for three or four minutes, until they have a pink color. Keep in mind that the earthenware pot keeps the contents warm up to half an hour, so the shrimps will continue cooking once removed from the fire.</li>
+                <li>Sprinkle a teaspoon of paprika powder (spicy or sweet) over everything and some salt.</li>
+            </ol>
 </body>
 </html>
