--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/ribs.html">Quick and easy oven-baked ribs</a>
-    <a href="recipes/prawns-al-pil-pil.html">Delicious prawns al pil-pil that will surprise your family</a>
+    <ul>
+    <li><a href="recipes/ribs.html">Quick and easy oven-baked ribs</a></li>
+    <li><a href="recipes/prawns-al-pil-pil.html">Delicious prawns al pil-pil that will surprise your family</a></li>
+    </ul>   
 </body>
 </html>
